# gf-embedded-grammars-tutorial

./: .gitignore  MiniLang.hs  MiniLang.pgf  README.md  ReflTransfer.hs  ReflTransfer.ipynb  Translator.hs  gf-embedded-grammars-tutorial.cabal  stack.yaml
advanced-gadts/: MiniLang.hs  README.md  ReflTransferWithGADTs.hs  advanced-gadts.cabal  stack.yaml
advanced-pgf2/: MiniLang.hs  README.md  ReflTransferWithPGF2.hs  advanced-pgf2.cabal  stack.yaml
dependent-types/: Nat.gf  Nat.pgf  NatC.gf  README.md  TestC.hs  TestHS.hs  deptyp.cabal  stack.yaml
resource/: MiniGrammar.gf  MiniGrammarEng.gf  MiniResEng.gf
