name: gf-embedded-grammars-tutorial
version: 0.1
homepage: https://github.com/inariksit/gf-embedded-grammars-tutorial
author: Inari Listenmaa
category: Natural Language Processing
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10


executable ReflTransfer
  hs-source-dirs:
    .
  main-is: ReflTransfer.hs
  other-modules:
    MiniLang
    -- generated automatically from resource/MiniLang*
  build-depends:
    base,
    gf
  default-language: Haskell2010
