name: advanced-pgf2
version: 0.1
homepage: https://github.com/inariksit/gf-embedded-grammars-tutorial
author: Inari Listenmaa
category: Natural Language Processing
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10


executable ReflTransferWithPGF2
  hs-source-dirs:
    .
  main-is: ReflTransferWithPGF2.hs
  other-modules:
    MiniLang
  build-depends:
    base,
    pgf2,
    containers
  default-language: Haskell2010
